# fileparthasher

./: Cargo.toml  Readme.md
src/: filehasher.rs
