[package]
name = "fileparthasher"
version = "0.0.3"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/fileparthasher"
readme = "Readme.md"
description = "File hasher to calculate the hash for a section of a file, the hash is `u64` size. The `Write` trait was implemented for it."
keywords = ["hash", "write"]

[lib]
name = "filehasher"
path = "src/filehasher.rs"
